feat(template.task): added custom task for to upload by customer
