# src/interfaces/api/dto/Assessment.ts
@@ -6,12 +6,20 @@ import { Type } from 'class-transformer';
 import Task from './Task';
 
 export default class Assessment {
-  @IsDefined()
-  @IsNotEmpty({ message: 'Assesment key can not be empty' })
+  @IsDefined({ always: true })
+  @IsNotEmpty({ message: 'Assesment key can not be empty', always: true })
   key: string;
 
-  @ValidateNested()
+  duration: string;
+
+  @ValidateNested({ groups: ['verify', 'submit'] })
   @Type(() => Task)
-  @ArrayNotEmpty()
+  @ArrayNotEmpty({ groups: ['verify', 'submit'] })
   tasks: Task[];
+
+  constructor(key: string, duration: string, tasks: Task[]) {
+    this.key = key;
+    this.duration = duration;
+    this.tasks = tasks;
+  }
 }
